force-app/main/default/objects/GTM_Instrument_Outcome_Range__c/GTM_Instrument_Outcome_Range__c.object-meta.xml
<CustomObject>
    <label>GTM Instrument Outcome Range</label>
    <pluralLabel>GTM Instrument Outcome Ranges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <type>AutoNumber</type>
        <label>Outcome Range Number</label>
        <displayFormat>OR-{0000}</displayFormat>
    </nameField>
</CustomObject>