force-app/main/default/objects/GTM_Instrument_Outcome_Range__c/fields/GTM_Instrument_Definition__c.field-meta.xml
<CustomField>
    <fullName>GTM_Instrument_Definition__c</fullName>
    <label>GTM Instrument Definition</label>
    <description>The parent instrument definition this outcome range belongs to.</description>
    <referenceTo>GTM_Instrument_Definition__c</referenceTo>
    <relationshipLabel>Outcome Ranges</relationshipLabel>
    <relationshipName>Outcome_Ranges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>