force-app/main/default/objects/GTM_Instrument_Outcome_Range__c/fields/Max_Score__c.field-meta.xml
<CustomField>
    <fullName>Max_Score__c</fullName>
    <label>Max Score</label>
    <description>Inclusive upper bound of the total instrument score this range covers.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>