force-app/main/default/objects/GTM_Instrument_Outcome_Range__c/fields/Min_Score__c.field-meta.xml
<CustomField>
    <fullName>Min_Score__c</fullName>
    <label>Min Score</label>
    <description>Inclusive lower bound of the total instrument score this range covers.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>