force-app/main/default/objects/GTM_Instrument_Outcome_Range__c/fields/Readout_Template_Key__c.field-meta.xml
<CustomField>
    <fullName>Readout_Template_Key__c</fullName>
    <label>Readout Template Key</label>
    <description>Free-text key identifying the readout content/template to use when a submission lands in this outcome range. Resolution logic is a sub-issue 02/03 concern; this field only stores the author's chosen key.</description>
    <type>Text</type>
    <length>100</length>
</CustomField>