force-app/main/default/objects/GTM_Instrument_Outcome_Range__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <description>Authoring/display order of this outcome range within its parent instrument definition's outcome mapping list.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>