force-app/main/default/objects/GTM_Instrument_Outcome_Range__c/fields/Tier_Label__c.field-meta.xml
<CustomField>
    <fullName>Tier_Label__c</fullName>
    <label>Tier Label</label>
    <description>Author-configurable result tier name shown for a score falling in this range (e.g. "Low Readiness", "High Readiness") -- replaces the fixed GTM_Assessment_Request__c.Assessment_Tier__c picklist for instruments authored on this schema.</description>
    <type>Text</type>
    <length>100</length>
</CustomField>